syntax = "proto3";

option java_package = "com.hackathonhub.serviceauth.grpc";


message AuthorityAccessResponse {
    bool hasAccess = 1;
}

message AuthorityAccessRequest {
    string accessToken = 1;
    string route = 2;
}



service Authority {
    rpc authorityAccessCheck(AuthorityAccessRequest) returns (AuthorityAccessResponse);
}